cmake_minimum_required(VERSION 3.22)
project(context)
enable_language(C ASM)
set(CMAKE_CXX_STANDARD 23)
set(ASM_OPTIONS "-x assembler-with-cpp")
set(CMAKE_ASM_FLAGS "${CFLAGS} ${ASM_OPTIONS}")

add_library(context_x86 STATIC x86.s inc/x86.h x86.c)
add_library(context_posix STATIC inc/posix.h posix.c)
target_compile_definitions(context_posix PUBLIC IO_POSIX)
target_include_directories(context_posix PUBLIC "inc")
target_include_directories(context_x86 PUBLIC "inc")

add_library(context INTERFACE)
if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL "x86_64")
    message("-- Using x86_64 context switching")
    target_link_libraries(context INTERFACE context_x86)
else()
    message("-- Using posix context switching")
    target_link_libraries(context INTERFACE context_posix)
endif()